[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/HomeScreen.gd" type="Script" id=1]
[ext_resource path="res://fonts/hpsimplifiedhans-light.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.317647, 0.282353, 0.431373, 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.760784, 0.835294, 0.878431, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.521569, 0.54902, 0.709804, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.988235, 0.988235, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.2, 0.0431373, 0.0431373, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.2, 0.184314, 0.184314, 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[node name="HomeScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="NinePatchRect"]
margin_left = 264.0
margin_top = 82.0
margin_right = 789.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 2 )
text = "LEARN KANJI YOU FOOL"
align = 1
autowrap = true

[node name="LearnButton" type="Button" parent="."]
margin_left = 380.944
margin_top = 192.651
margin_right = 642.944
margin_bottom = 271.651
rect_pivot_offset = Vector2( -111.941, 251.633 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.176471, 0.172549, 0.215686, 1 )
text = "Learn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashCardButton" type="Button" parent="."]
margin_left = 380.944
margin_top = 287.208
margin_right = 642.944
margin_bottom = 366.208
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.176471, 0.172549, 0.215686, 1 )
text = "Flashcards!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Revise" type="Button" parent="."]
margin_left = 380.944
margin_top = 378.948
margin_right = 642.944
margin_bottom = 457.948
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.176471, 0.172549, 0.215686, 1 )
text = "Revise"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KanjiListButton" type="Button" parent="."]
margin_left = 380.944
margin_top = 471.631
margin_right = 642.944
margin_bottom = 550.631
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.176471, 0.172549, 0.215686, 1 )
text = "Kanji List"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="."]
margin_left = 871.0
margin_top = 566.0
margin_right = 1025.0
margin_bottom = 600.0
custom_styles/hover = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0.105882, 0.105882, 1 )
text = "RESET CHARACTERS"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="LearnButton" to="." method="_on_LearnButton_button_down"]
[connection signal="button_down" from="FlashCardButton" to="." method="_on_FlashCardButton_button_down"]
[connection signal="button_down" from="Revise" to="." method="_on_Revise_button_down"]
[connection signal="button_down" from="KanjiListButton" to="." method="_on_KanjiListButton_button_down"]
[connection signal="button_down" from="Reset" to="." method="_on_Reset_button_down"]
